| Summary: | ASTERISK-22297: Local channels, in a bridge, don't leave Stasis on hangup | ||
| Reporter: | David M. Lee (dlee) | Labels: | |
| Date Opened: | 2013-08-14 12:44:19 | Date Closed: | 2013-08-21 09:09:08 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | SVN 12 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This bug causes the rest_api/bridges/move test to fail in the /team/dlee/ari-bridge-tests branch of the testsuite.
In summary: # Put a Local channel in Stasis # Put that channel into a bridge # Hangup the channel via ARI (DELETE /ari/channels/{id}) Expected results: Should get ChannelLeftBridge and StasisEnd messages on hangup. Actual results: We get the ChannelLeftBridge message, but no StasisEnd. From the testsuite, we'll eventually get the StasisEnd when the reactor times out and shuts down Asterisk. | ||
| Comments: | |||